--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Breakout</title>
   </head>
   <body>
-    <canvas id="game"></canvas>
+    <canvas id="game" width="414" height="768"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
